fixed invisibles

--- a/styles/base.less
+++ b/styles/base.less
@@ -441,3 +441,7 @@ atom-text-editor.is-focused .line.cursor-line,
     color: #d3423e;
     font-weight: bold;
 }
+.invisible-character, {
+    font-weight: normal !important;
+    font-style: normal !important;
+}
