--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -7,15 +7,17 @@
 // General colors
 @syntax-text-color: #AABBC3;
 //@syntax-cursor-color: #1562FD;
-@syntax-cursor-color: rgb(235, 53, 53);
+//@syntax-cursor-color: rgb(235, 53, 53);
+@syntax-cursor-color: rgb(186, 255, 40);
 @syntax-selection-color: rgba(100,100,100,0.5);
 @syntax-background-color: transparent;
 @syntax-comment-color: #49656f;
 
 // Guide colors
-@syntax-wrap-guide-color: lighten(@syntax-background-color, 2.5%);
+@syntax-wrap-guide-color: white !important;
 @syntax-indent-guide-color: lighten(@syntax-background-color, 2.5%);
-@syntax-invisible-character-color: lighten(@syntax-background-color, 5%);
+@syntax-invisible-character-color: white !important;
+
 
 // For find and replace markers
 @syntax-result-marker-color: #65737e;
